feat: Replace homepage content with zisezicai layout
- Update index.html to use zisezicai design as main page
- Maintain video assets and functionality

--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>我的网站</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f5f5f5;
-            font-family: sans-serif;
-        }
-        .message {
-            font-size: 2.5em;
-            color: #333;
-        }
-    </style>
+    <title>紫色紫菜的网站</title>
+    <meta name="author" content="紫色紫菜">
 </head>
 <body>
-    <div class="message">🚧 施工中 🚧</div>
+<div><b>看什么看，才学了一点点东西，还想要我做成什么样啊！！！</b></div>
+<div></div>
+<div></div>
+<article>
+    <header>
+        <h1><b>学些什么了？</b></h1>
+    </header>
+    <span>span标签</span>
+    <div>div标签</div>
+    <article>
+        <header>article元素(这是header)</header>
+        这是article的内容
+        <footer>
+            这是article的尾元素(footer)
+        </footer>
+    </article>
+    <section>
+        section元素
+    </section>
+    <div>video视频播放(你别管播了什么)</div>
+    <div>差点忘记怎么写了，记个笔记</div>
+    <div>&lt;video src="视频文件" height="视频高度" width="视频宽度" controls="control"&gt;未成功播放提示&lt;videos&gt;</div>
+    <video src="videos/展示视频.mp4" height="300" width="400" controls="controls">
+        肺物浏览器，连播视频都不行，劝你早点换个浏览器
+    </video>
+</article>
 </body>
+
 </html>
