Fix video source path in index.html
-修复视频文件路径错误问题导致的视频播放问题

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div>video视频播放(你别管播了什么)</div>
     <div>差点忘记怎么写了，记个笔记</div>
     <div>&lt;video src="视频文件" height="视频高度" width="视频宽度" controls="control"&gt;未成功播放提示&lt;videos&gt;</div>
-    <video src="videos/展示视频.mp4" height="300" width="400" controls="controls">
+    <video src="展示视频.mp4" height="300" width="400" controls="controls">
         肺物浏览器，连播视频都不行，劝你早点换个浏览器
     </video>
 </article>
