--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
     <title>紫色紫菜的网站</title>
@@ -30,7 +30,8 @@
     <div>&lt;video src="视频文件" height="视频高度" width="视频宽度" controls="control"&gt;未成功播放提示&lt;videos&gt;</div>
     <video src="展示视频.mp4" height="300" width="400" controls="controls">
         肺物浏览器，连播视频都不行，劝你早点换个浏览器
-    </video>
+    </video><br>
+    <a href="downloads.html">跳转至资源分享</a>
 </article>
 </body>
 
